[package]
name = "mandelbrots-mage"
version = "1.0.1"
edition = "2021"
authors = ["Dallin Hutchison"]
license = "MIT OR Apache-2.0"
description = "A command line tool for creating images and GIFs of the Mandelbrot set."
readme = "README.md"
homepage = "https://github.com/WhaleCoded/mandelbrots-mage"
repository = "https://github.com/WhaleCoded/mandelbrots-mage"
keywords = ["cli", "Mandelbrot's Set", "fractal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
image = "0.24.6"

[profile.release]
debug = true